# trading-sim-server

./: Cargo.toml  README.md
src/: main.rs
src/db/: mongo.rs
src/models/: mod.rs  stock_models.rs  trade_models.rs  users.rs
src/routes/: auth.rs  mod.rs  stock_details.rs  stock_listing.rs  trade_route.rs
src/services/: auth_service.rs  mod.rs  stock_service.rs  trade_service.rs
