[package]
name = "trading-sim-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.18" 
mongodb = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.10"
log = "0.4"
env_logger = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
chrono ={ version = "0.4",  features = ["serde"]}
futures = "0.3"
sentry = "0.34.0"
sentry-log = "0.34.0"
sentry-actix = "0.34.0"

